Refactor code for improved readability, maintainability, and performance